# GaiaAgent

./: .env.example  .gitignore  .prettierignore  README.md  README.zh-CN.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-runtime-boundaries.md  0002-native-agent-runtime.md  0003-rmcp-client.md
docs/design/: agent-loop-redesign.md  ai-sandbox-and-skills.md  business-capability-roadmap.md  context-memory.md  gaiaagent-modernization-roadmap.md  mcp-client.md  mcp-improvements.md  scene-task-workbench.md
docs/release/: release-runbook.md
docs/security/: threat-model.md
docs/testing/: development-progress-checklist.md  e2e-matrix.md  mcp-contract.md  natural-resource-compliance-e2e.md  scene-performance.md  scene-workbench-e2e.md
examples/tauri-app/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/icons/: icon.icns
examples/tauri-app/src-tauri/src/: lib.rs  mcp.rs
public/: cesium-mcp-bridge.browser.global.js
scripts/: copy-cesium.mjs  generate-sbom.mjs  prepare-runtime-bundle.mjs  update-bridge.mjs
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/runtime-bundle/: package-lock.json  package.json
src-tauri/src/: ai_sandbox.rs  lib.rs  main.rs  mcp.rs  resource_proxy.rs  telemetry.rs
src-tauri/src/agent/: mod.rs  provider.rs  provider_http.rs  runtime.rs  state.rs
src-tauri/src/agent/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src-tauri/tests/: mcp_contract.rs
src-tauri/windows/: nsis-hooks.nsh
src/agent/: ai-sandbox.ts  business-workflows.test.ts  business-workflows.ts  event-reducer.test.ts  event-reducer.ts  events.test.ts  events.ts  export-filenames.test.ts  export-filenames.ts  geojson-csv.test.ts  geojson-csv.ts  history.ts  index.ts  llm.ts  scene-analysis-summary.ts  scene-deliverables-import-summary.test.ts  scene-deliverables-import-summary.ts  scene-deliverables-package.test.ts  scene-deliverables-package.ts  (+15 more)
worklogs/: 2026-04-01.md  2026-04-03.md
(+80 files in other folders)
