[package]
name = "gaia-agent"
version = "0.3.0"
description = "GaiaAgent — AI-Powered 3D GIS Assistant (Tauri)"
authors = []
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "gaia_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
anyhow = "1"
once_cell = "1"
dotenvy = "0.15"
dirs = "5"
keyring = "4.1.2"
rmcp = { version = "2.0.0", default-features = false, features = ["auth", "client", "transport-child-process", "transport-streamable-http-client-reqwest", "reqwest-native-tls"] }
async-trait = "0.1"
reqwest13 = { package = "reqwest", version = "0.13", default-features = false, features = ["native-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }

[dev-dependencies]
rmcp = { version = "2.0.0", default-features = false, features = ["client", "server", "macros", "transport-streamable-http-server"] }
schemars = "1"
axum = "0.8"
tokio-util = "0.7"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
